Stable version with mock provider